--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-query": "^3.34.12",
+    "react-toastify": "^8.1.1",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
