--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@nrwl/next": "13.7.2",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
+    "graphql": "^15.8.0",
     "js-cookie": "^3.0.1",
     "next": "^12.0.10",
     "react": "17.0.2",
@@ -26,6 +29,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.5.0",
+    "@graphql-codegen/typescript-operations": "^2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.5",
     "@nrwl/cli": "13.7.2",
     "@nrwl/cypress": "13.7.2",
     "@nrwl/eslint-plugin-nx": "13.7.2",
