--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,18 @@
       "@belajar-nx/dashboard/feature-shell": [
         "libs/dashboard/feature-shell/src/index.ts"
       ],
+      "@belajar-nx/dashboard/posts/feature-create-post": [
+        "libs/dashboard/posts/feature-create-post/src/index.ts"
+      ],
+      "@belajar-nx/dashboard/posts/feature-detail-post": [
+        "libs/dashboard/posts/feature-detail-post/src/index.ts"
+      ],
+      "@belajar-nx/dashboard/posts/feature-edit-post": [
+        "libs/dashboard/posts/feature-edit-post/src/index.ts"
+      ],
+      "@belajar-nx/dashboard/posts/feature-shell": [
+        "libs/dashboard/posts/feature-shell/src/index.ts"
+      ],
       "@belajar-nx/dashboard/users/feature-create-user": [
         "libs/dashboard/users/feature-create-user/src/index.ts"
       ],
@@ -53,8 +65,14 @@
         "libs/shared/utils/cookie/src/index.ts"
       ],
       "@belajar-nx/shared-utils-http": ["libs/shared/utils/http/src/index.ts"],
+      "@belajar-nx/shared/data-access/post": [
+        "libs/shared/data-access/post/src/index.ts"
+      ],
       "@belajar-nx/shared/environments": [
         "libs/shared/environments/src/index.ts"
+      ],
+      "@belajar-nx/shared/utils/graphql": [
+        "libs/shared/utils/graphql/src/index.ts"
       ]
     }
   },
